--- a/integrations.yml
+++ b/integrations.yml
@@ -404,7 +404,7 @@ integrations:
     image: extras/hrm.png
     category: 2
   - title: "Claritee"
-    description: "Claritee empowers professionals to enhance project ideation, planning, and collaboration, redefining digital asset and design project creation."
+    description: "Claritee enables professionals to easily ideate, plan and collaborate on digital projects and assets."
     url: "https://claritee.io"
     image: extras/claritee.png
     category: 3
